--- a/roles/minio/vars/main.yml
+++ b/roles/minio/vars/main.yml
@@ -33,6 +33,7 @@ _minio:
   minor_version: 4
   patch_version: 0
   image_tag: "RELEASE.2024-12-18T13-15-44Z"
+  hostname: minio-console.jtest.pivotal.io
   api_port: 9000
   console_port: 9001
   admin_user: "admin"
