--- a/roles/prometheus/tasks/install-prometheus.yml
+++ b/roles/prometheus/tasks/install-prometheus.yml
@@ -1,3 +1,4 @@
+---
 - name: Create Namespace for Persistent Volumes
   shell: |
     kubectl create namespace {{ _prometheus.namespace }}
@@ -8,30 +9,34 @@
   when: print_debug == true
 
 
-- name: Copy Cluster Local PVC Config Yaml
-  template:
-    src: "{{ item }}.j2"
-    dest: "{{ base_path }}/{{ item }}"
-  register: copy_cluster_local_pvc_config_yaml
-  with_items:
-    - "local-storage-class.yaml"
-    - "local-storage-pv.yaml"
-    - "local-storage-pvc.yaml"
-- debug: msg={{ copy_cluster_local_pvc_config_yaml }}
+- import_tasks: create-local-pv.yml
+  when: _prometheus.directpv == false
 
 
-- name: Cluster Settings for a Production Cluster Running in a Dynamic Cloud Environment including VMware
-  shell: |
-    kubectl create -f {{ item }}
-  register: create_pvc
-  with_items:
-    - "local-storage-class.yaml"
-    - "local-storage-pv.yaml"
-    - "local-storage-pvc.yaml"
-  args:
-    chdir: "{{ base_path }}/"
-- debug: msg={{ create_pvc }}
-  when: print_debug == true
+#- name: Copy Cluster Local PVC Config Yaml
+#  template:
+#    src: "{{ item }}.j2"
+#    dest: "{{ base_path }}/{{ item }}"
+#  register: copy_cluster_local_pvc_config_yaml
+#  with_items:
+#    - "local-storage-class.yaml"
+#    - "local-storage-pv.yaml"
+#    - "local-storage-pvc.yaml"
+#- debug: msg={{ copy_cluster_local_pvc_config_yaml }}
+
+
+#- name: Cluster Settings for a Production Cluster Running in a Dynamic Cloud Environment including VMware
+#  shell: |
+#    kubectl create -f {{ item }}
+#  register: create_pvc
+#  with_items:
+#    - "local-storage-class.yaml"
+#    - "local-storage-pv.yaml"
+#    - "local-storage-pvc.yaml"
+#  args:
+#    chdir: "{{ base_path }}/"
+#- debug: msg={{ create_pvc }}
+#  when: print_debug == true
 
 
 - name: Copy Prometheus Helm Config
