--- a/roles/grafana/tasks/install-ingress.yml
+++ b/roles/grafana/tasks/install-ingress.yml
@@ -24,6 +24,8 @@
 - name: Install NGINX Ingress
   shell: |
     helm install {{ _nginx.ingress.name }} ingress-nginx/ingress-nginx -n {{ _nginx.ingress.namespace }} \
+    --set controller.ingressClass=grafana-ingress-class \
+    --set controller.ingressClassResource.name=grafana-ingress-class \
     --set controller.service.enabled=true \
     --set controller.external.enabled=true \
     --set controller.service.type=LoadBalancer \
@@ -58,6 +60,19 @@
     - "grafana-ingress-class.yaml"
     - "create-grafana-ingress.yaml"
 - debug: msg={{ copy_nginx_ingress_config }}
+
+
+- name: Validate if NGINX Controller Adminission is Connected
+  shell: |
+    nc -zv $(kubectl -n {{ _nginx.ingress.namespace }} get svc | grep nginx-controller-admission | awk '{print $3}') 443 2>&1 | grep Connected | awk '{print $2}'
+  register: check_nginx_controller_admission
+  until: check_nginx_controller_admission.stdout.find(item.string) != -1
+  retries: 100
+  delay: 10
+  with_items:
+    - { svc: "nginx-controller-admission", string: "Connected" }
+- debug: msg={{ check_nginx_controller_admission }}
+  when: print_debug == true
 
 
 - name: Apply NGINX Ingress
