--- a/roles/prometheus/tasks/cleanup-prometheus-env.yml
+++ b/roles/prometheus/tasks/cleanup-prometheus-env.yml
@@ -1,15 +1,17 @@
 ---
 - name: Remove Directory for Persistent Volumes
   file:
+    # path: "{{ _prometheus.persistence.storage_path }}-{{ item }}"
     path: "{{ _prometheus.storage_path }}-{{ item }}"
     state: absent
   register: remove_pv_dir
   with_sequence: start=0 end={{ total_prometheus_containers|int }}
+  when: _prometheus.directpv == false
 - debug: msg={{ remove_pv_dir }}
-  when: print_debug == true
+  when: print_debug == true and _prometheus.directpv == false
 
 
-- name: Remove Kernel Parameters for Kafka
+- name: Remove Kernel Parameters for prometheus
   lineinfile:
     dest: /etc/sysctl.d/sysctl-k8s.conf
     regexp: "{{ item }}"
