--- a/roles/prometheus/tasks/prepare-prometheus-env.yml
+++ b/roles/prometheus/tasks/prepare-prometheus-env.yml
@@ -1,6 +1,7 @@
 ---
 - name: Create Directory for Persistent Volumes
   file:
+    # path: "{{ _prometheus.persistence.storage_path }}-{{ item }}"
     path: "{{ _prometheus.storage_path }}-{{ item }}"
     state: directory
     owner: root
@@ -8,8 +9,9 @@
     mode: 0777
   register: create_pv_dir
   with_sequence: start=0 end={{ total_prometheus_containers|int }}
+  when: _prometheus.directpv == false
 - debug: msg={{ create_pv_dir }}
-  when: print_debug == true
+  when: print_debug == true and _prometheus.directpv == false
 
 
 - name: Apply Kernel Parameters
