--- a/roles/prometheus/tasks/uninstall-ingress.yml
+++ b/roles/prometheus/tasks/uninstall-ingress.yml
@@ -8,6 +8,8 @@
   with_items:
     - "prometheus-ingress-class.yaml"
     - "create-prometheus-ingress.yaml"
+    - "alertmanager-ingress-class.yaml"
+    - "create-alertmanager-ingress.yaml"
 - debug: msg={{ copy_nginx_ingress_config }}
 
 
@@ -19,8 +21,10 @@
   with_items:
     - "create-prometheus-ingress.yaml"
     - "prometheus-ingress-class.yaml"
+    - "create-alertmanager-ingress.yaml"
+    - "alertmanager-ingress-class.yaml"
   args:
-    chdir: "{{ base_path }}/"
+    chdir: "{{ base_path }}"
   environment:
     PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
 - debug: msg={{ delete_nginx_ingress }}
@@ -29,26 +33,30 @@
 
 - name: Uninstall NGINX Ingress
   shell: |
-    helm uninstall {{ _nginx.ingress.name }} -n {{ _nginx.ingress.namespace }}
+    helm uninstall {{ item.nginx_ingress_name }} -n {{ _nginx.ingress.namespace }}
   register: uninstall_nginx_ingress
   ignore_errors: true
   args:
-    chdir: "{{ base_path }}/"
+    chdir: "{{ base_path }}"
   environment:
     PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
+  with_items:
+    - { nginx_ingress_name: "{{ _nginx.ingress.prometheus.name }}",   ip_addr: "{{ _nginx.ingress.prometheus.ip_addr }}",   ingress_class: "{{ _nginx.ingress.prometheus.class_name }}" }
+    - { nginx_ingress_name: "{{ _nginx.ingress.alertmanager.name }}", ip_addr: "{{ _nginx.ingress.alertmanager.ip_addr }}", ingress_class: "{{ _nginx.ingress.alertmanager.class_name }}" }
 - debug: msg={{ uninstall_nginx_ingress }}
 
 
 - name: Validate if NGINX Ingress Controller Containers are Running
   shell: |
-    kubectl get pod -n {{ _nginx.ingress.namespace }} | grep {{ item.svc }} | awk '{print $3}' | grep Running | wc -l
+    kubectl get pod -n {{ _nginx.ingress.namespace }} | grep {{ item.svc }} | grep controller-admission | awk '{print $3}' | grep Running | wc -l
   register: check_nginx_ingress_controller_container
   ignore_errors: true
   until: check_nginx_ingress_controller_container.stdout|int == 0
   retries: 100
   delay: 10
   with_items:
-    - { svc: "ingress-nginx-controller-", replica: "{{ _prometheus.admin.replica }}" }
+    - { svc: "prometheus-nginx-ingress",   string: "Connected" }
+    - { svc: "alertmanager-nginx-ingress", string: "Connected" }
 - debug: msg={{ check_nginx_ingress_controller_container }}
   when: print_debug == true
 
@@ -59,7 +67,7 @@
   register: delete_namespace
   ignore_errors: true
   args:
-    chdir: "{{ base_path }}/"
+    chdir: "{{ base_path }}"
   environment:
     PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
 - debug: msg={{ delete_namespace }}
@@ -75,5 +83,7 @@
   with_items:
     - "prometheus-ingress-class.yaml"
     - "create-prometheus-ingress.yaml"
+    - "alertmanager-ingress-class.yaml"
+    - "create-alertmanager-ingress.yaml"
 - debug: msg={{ delete_nginx_ingress_config }}
 
