--- a/roles/prometheus/tasks/uninstall-prometheus.yml
+++ b/roles/prometheus/tasks/uninstall-prometheus.yml
@@ -28,52 +28,6 @@
   when: _prometheus.directpv == false
 
 
-#- name: Copy Cluster Local PVC Config Yaml
-#  template:
-#    src: "{{ item }}.j2"
-#    dest: "{{ base_path }}/{{ item }}"
-#  register: copy_cluster_local_pvc_config_yaml
-#  ignore_errors: true
-#  with_items:
-#    - "local-storage-class.yaml"
-#    - "local-storage-pv.yaml"
-#    - "local-storage-pvc.yaml"
-#- debug: msg={{ copy_cluster_local_pvc_config_yaml }}
-#  ignore_errors: true
-#  when: print_debug == true
-
-
-#- name: Delete Persistent Volumes, Claim and Storage Class
-#  shell: |
-#    kubectl delete -f {{ item }}
-#  register: delete_pvc
-#  ignore_errors: true
-#  with_items:
-#    - "local-storage-pvc.yaml"
-#    - "local-storage-pv.yaml"
-#    - "local-storage-class.yaml"
-#  args:
-#    chdir: "{{ base_path }}/"
-#- debug: msg={{ delete_pvc }}
-#  ignore_errors: true
-#  when: print_debug == true
-#
-#
-#- name: Delete Cluster Local PVC Config Yaml
-#  file:
-#    path: "{{ base_path }}/{{ item }}"
-#    state: absent
-#  register: delete_cluster_local_pvc_config_yaml
-#  ignore_errors: true
-#  with_items:
-#    - "local-storage-class.yaml"
-#    - "local-storage-pv.yaml"
-#    - "local-storage-pvc.yaml"
-#- debug: msg={{ delete_cluster_local_pvc_config_yaml }}
-#  ignore_errors: true
-#  when: print_debug == true
-
-
 - name: Delete Namespace for Persistent Volumes
   shell: |
     kubectl delete namespace {{ _prometheus.namespace }}
@@ -84,12 +38,12 @@
   when: print_debug == true
 
 
-#- name: Delete Prometheus Helm Config
-#  file:
-#    path: "{{ base_path }}/{{ item }}"
-#    state: absent
-#  register: delete_prometheus_helm_config
-#  with_items:
-#    - "prometheus-values.yaml"
-#- debug: msg={{ delete_prometheus_helm_config }}
+- name: Delete Prometheus Helm Config
+  file:
+    path: "{{ base_path }}/{{ item }}"
+    state: absent
+  register: delete_prometheus_helm_config
+  with_items:
+    - "prometheus-values.yaml"
+- debug: msg={{ delete_prometheus_helm_config }}
 
