--- a/roles/minio/vars/main.yml
+++ b/roles/minio/vars/main.yml
@@ -36,9 +36,9 @@ _minio:
   namespace: minio
   metrics:
     service_monitor:
-      enabled: true
-      include_node: true
-      public: true
+      enabled: false
+      include_node: false
+      public: false
   persistence:
     storage_path: "/opt/minio-storage"
     enabled: "true"
