--- a/roles/prometheus/tasks/config-minio-metrics.yml
+++ b/roles/prometheus/tasks/config-minio-metrics.yml
@@ -6,7 +6,7 @@
 
 - name: Add Local MinIO Client Configuration
   shell: |
-    mcli alias set myminio http://minio-api.jtest.pivotal.io admin changeme --insecure
+    mcli alias set myminio https://minio-api.jtest.pivotal.io admin changeme --insecure
   register: add_local_minio_client_config
   args:
     executable: /bin/bash
@@ -18,10 +18,7 @@
 
 - name: Scraps MinIO Metrics
   shell: |
-    echo "" >> /etc/prometheus/prometheus.yml
-    echo "####  Scraps {{ item.comment }}  ####" >> /etc/prometheus/prometheus.yml
-    mcli admin prometheus {{ item.action }} | sed 1d | sed -e 's/{{ item.org }}/{{ item.replace }}/g' | \
-    sed -e '1,$ s/^/  /g' | sed '$ s/$/\n    honor_timestamps: false/' >> /etc/prometheus/prometheus.yml
+    mcli admin prometheus {{ item.action }} > /root/prometheus.yml
   register: scrap_minio_cluster_metrics
   args:
     executable: /bin/bash
@@ -29,6 +26,21 @@
     PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
   with_items:
     - { org: 'minio-job',              replace: 'minio-job',                       action: 'generate myminio',                                                       comment: 'Scraps MinIO Cluster Metrics' }
+- debug: msg="{{ scrap_minio_cluster_metrics }}"
+
+
+#  sed -e '1,$ s/^/  /g' | sed '$ s/$/\n    honor_timestamps: false/' >> /root/prometheus.yml
+- name: Scraps MinIO Metrics
+  shell: |
+    echo "" >> /root/prometheus.yml
+    mcli admin prometheus {{ item.action }} | sed 1d | sed -e 's/{{ item.org }}/{{ item.replace }}/g' \
+    >> /root/prometheus.yml
+  register: scrap_minio_cluster_metrics
+  args:
+    executable: /bin/bash
+  environment:
+    PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
+  with_items:
     - { org: 'minio-job-node',         replace: 'minio-job-node',                  action: 'generate myminio node',                                                  comment: 'Scraps MinIO Node Metrics' }
     - { org: 'minio-job',              replace: 'minio-job-v2-cluster',            action: 'generate myminio cluster',                                               comment: 'Scraps MinIO Cluster Metrics' }
     - { org: 'minio-job-bucket',       replace: 'minio-job-bucket',                action: 'generate myminio bucket',                                                comment: 'Scraps MinIO Buckets Metrics' }
@@ -45,14 +57,18 @@
 - debug: msg="{{ scrap_minio_cluster_metrics }}"
 
 
-- name: Reload and Restart Prometheus Services
-  systemd:
-    daemon_reexec: true
-    daemon_reload: true
-    name: "{{ item }}"
-    enabled: true
-    state: restarted
-  register: restart_prometheus_services
-  with_items:
-    - prometheus
+#- name: Add Local MinIO Client Configuration
+#  shell: |
+#    kubectl apply -f /root/prometheus.yml
+#  register: add_local_minio_client_config
+#  args:
+#    executable: /bin/bash
+#  environment:
+#    PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
+#- debug: msg="{{ add_local_minio_client_config }}"
+#  register: add_local_minio_client_config
+
+
+# kubectl get configmap prometheus-server -n prometheus -o yaml
+
 
