--- a/roles/minio/tasks/install-minio.yml
+++ b/roles/minio/tasks/install-minio.yml
@@ -10,6 +10,10 @@
 - import_tasks: create-local-pv.yml
   when: _minio.directpv == false
 
+# Release Name
+# helm ls --all-namespaces | grep kube-prometheus | awk '{print $9}'
+# kube-prometheus-11.2.11
+
 
 - name: Copy MinIO Helm Config
   template:
