--- a/roles/prometheus/vars/main.yml
+++ b/roles/prometheus/vars/main.yml
@@ -1,11 +1,13 @@
 base_path: /root
 
+
 _kustomize:
   install: true
   download_url: "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"
   major_version: 5
   minor_version: 4
   patch_version: 2
+
 
 _prometheus:
   install: true
@@ -46,15 +48,31 @@ _prometheus:
   lb:
     install: true
     ip_addr: 192.168.1.186
-  # replica: 3
-  server:
+  prometheus:
     replica: 1
     ip_addr: 192.168.1.187
   alertmanager:
-    replica: 3
+    replica: 1
     ip_addr: 192.168.1.188
+  blackbox_exporter:
+    replica: 1
+    ip_addr: 192.168.1.189
+  kube_state_metrics:
+    replica: 1
+    ip_addr: 192.168.1.190
+  node_exporter:
+    replica: 4
+    ip_addr: 192.168.1.191
+  operator:
+    replica: 1
+    ip_addr: 192.168.1.192
+  thanos_ruler:
+    replica: 1
+    ip_addr: 192.168.1.193
 
-total_prometheus_containers: "{{ _prometheus.server.replica|int +_prometheus.alertmanager.replica|int }}"
+
+total_prometheus_containers: "{{ _prometheus.prometheus.replica|int +_prometheus.alertmanager.replica|int }}"
+
 
 _helm:
   enable_repo: true
@@ -62,6 +80,7 @@ _helm:
   minor_version:
   patch_version:
   build_version:
+
 
 _nginx:
   ingress:
@@ -76,21 +95,30 @@ _nginx:
       class_name: prometheus-ingress-class
       replica: 1
       hostname: prometheus
-      service: prometheus-server
+      service: kube-prometheus-prometheus
       ip_addr: 192.168.1.185
-      port: 80
+      port: 9090
     alertmanager:
       name: alertmanager-nginx-ingress
       class_name: alertmanager-ingress-class
       replica: 1
       hostname: alertmanager
-      service: prometheus-alertmanager
+      service: kube-prometheus-alertmanager
       ip_addr: 192.168.1.186
-      port: 80
+      port: 9093
   k8s_ingress:
     major_version: 3
     minor_version: 0
     patch_version: 2
+
+
+# kubectl get svc -n prometheus
+# alertmanager-operated                ClusterIP   None             <none>        9093/TCP,9094/TCP,9094/UDP   24m
+# kube-prometheus-blackbox-exporter    ClusterIP   10.111.163.72    <none>        19115/TCP                    24m
+# kube-prometheus-kube-state-metrics   ClusterIP   10.108.114.128   <none>        8080/TCP                     24m
+# kube-prometheus-node-exporter        ClusterIP   10.109.1.141     <none>        9100/TCP                     24m
+# kube-prometheus-operator             ClusterIP   10.99.236.198    <none>        8080/TCP                     24m
+
 
 _ssl:
   dir: "{{ base_path }}/prometheus-certs"
@@ -101,6 +129,7 @@ _ssl:
   organization: "Pivotal"
   common_name: "jest.pivotal.io"
   email: "rokmc756@gmail.com"
+
 
 _mc:
   release_date: 20250521015954.0.0-1
